--- a/main.html
+++ b/main.html
@@ -135,7 +135,7 @@
       </div>
       <div class="project-links">
         <a href="https://github.com/AYUSH5870/Books-app.git">Github</a>
-        <a href="booksearch9595.netlify.app">View live</a>
+        <a href="https://booksearch9595.netlify.app">View live</a>
       </div>
     </article> 
     <article class="project-card">
