--- a/main.html
+++ b/main.html
@@ -122,7 +122,7 @@
       </div>
       <div class="project-links">
         <a href="https://www.github.com/AYUSH5870/Weatherapp">Github</a>
-        <a href="weather-website4061.netlify.app">View live</a>
+        <a href="https://weather-website4061.netlify.app">View live</a>
       </div>
     </article>
     <article class="project-card">
