--- a/main.html
+++ b/main.html
@@ -140,7 +140,7 @@
     </article> 
     <article class="project-card">
       <div class="imageContainer">
-        <img src="./assets/ToDo.png" alt="" />
+        <img src="ToDo.png" alt="" />
       </div>
       <div class="project-details">
         <h2>ToDo App</h2>
