--- a/main.html
+++ b/main.html
@@ -114,7 +114,7 @@
     <div class="project-cards">
        <article class="project-card">
       <div class="imageContainer">
-        <img src="./assets/weatherapp.png" alt="" />
+        <img src="weatherapp.png" alt="" />
       </div>
       <div class="project-details">
         <h2>Weather App</h2>
@@ -127,7 +127,7 @@
     </article>
     <article class="project-card">
       <div class="imageContainer">
-        <img src="./assets/books.jpg" alt="" />
+        <img src="books.jpg" alt="" />
       </div>
       <div class="project-details">
         <h2>Book Search App</h2>
@@ -140,7 +140,7 @@
     </article> 
     <article class="project-card">
       <div class="imageContainer">
-        <img src=".assets/ToDo.png" alt="" />
+        <img src="https://github.com/AYUSH5870/P1-Babel/blob/6805ecc0a101d768293fbf51264e75e2658ed957/ToDo.png" alt="" />
       </div>
       <div class="project-details">
         <h2>ToDo App</h2>
