--- a/main.html
+++ b/main.html
@@ -140,7 +140,7 @@
     </article> 
     <article class="project-card">
       <div class="imageContainer">
-        <img src="https://github.com/AYUSH5870/P1-Babel/blob/6805ecc0a101d768293fbf51264e75e2658ed957/ToDo.png" alt="" />
+        <img src="ToDo.png" alt="" />
       </div>
       <div class="project-details">
         <h2>ToDo App</h2>
