--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
       </div>
       <div class="CTA">
         <button class="btn btn-1">
-          <a href="#contactPage">Let's get in touch!</a>
+          <a href="https://www.linkedin.com/in/ayush-k-santosh-88077221a">Let's get in touch!</a>
         </button>
         <!-- <button class="btn-outline btn-2">
           <a href="">Check out my blog</a>
