--- a/main.html
+++ b/main.html
@@ -130,8 +130,8 @@
         <img src="books.jpg" alt="" />
       </div>
       <div class="project-details">
-        <h2>Book Search App</h2>
-        <p>It is a React application where a user can add , delete & edit a book. </p>
+        <h2>Random Generator</h2>
+        <p>It is a React application where a user can add , delete & edit image generated using RestAPI & axios library. </p>
       </div>
       <div class="project-links">
         <a href="https://github.com/AYUSH5870/Books-app.git">Github</a>
