--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@
         <img src="weatherapp.png" alt="" />
       </div>
       <div class="project-details">
-        <h2>A CI/CD pipeline for a Python Flask Service/h2>
+        <h2>A CI/CD pipeline for a Python Flask Service</h2>
         <p>This Pipeline trigger builds automatically on each code 
 changes or updates.</p>
       </div>
